@@ -7,6 +7,8 @@
   EXTR_OVERWRITE. (jorto at redhat dot com)
 - Fixed crashes on invalid parameters in intl extension (Stas, Maksymilian
   Arciemowicz)
+- Fixed bug #53366 (Reflection doesnt get dynamic property value from
+  getProperty()). (Felipe)
 - Fixed bug #53362 (Segmentation fault when extending SplFixedArray). (Felipe)
 - Fixed bug #50987 (unaligned memory access in phar.c).
   (geissert at debian dot org, Ilia)
